css/styles.css
h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

ul {
  list-style: none;
  margin: 0;
  padding-left: 0;
}

img {
  display: block;
}

body {
  font-family: "Roboto", sans-serif;
  color: #434455;
  background-color: #ffffff;
}

a {
  text-decoration: none;
}

ul {
  list-style: none;
}

.logo {
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #2e2f42;
}

.logo-accent {
  color: #4d5ae5;
}

.nav-link {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #2e2f42;
}

.nav-link:hover,
.nav-link:focus {
  color: #404bbf;
}

.address {
  font-style: normal;
}

.address-link {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}

.address-link:hover,
.address-link:focus {
  color: #404bbf;
}

.hero {
  background-color: #2e2f42;
}

.hero-title {
  font-size: 56px;
  line-height: 1.07;
  font-weight: 700;
  letter-spacing: 0.02em;
  text-align: center;
  color: #ffffff;
}

.hero-button {
  font-family: inherit;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: #ffffff;
  background-color: #4d5ae5;
  border: none;
  cursor: pointer;
}

.hero-button:hover,
.hero-button:focus {
  background-color: #404bbf;
}

.features-title {
  font-size: 36px;
  line-height: 1.11;
  font-weight: 700;
  letter-spacing: 0.02em;
  text-align: center;
  text-transform: capitalize;
  color: #2e2f42;
}

.team-title,
.portfolio-title {
  font-size: 36px;
  line-height: 1.11;
  font-weight: 700;
  letter-spacing: 0.02em;
  text-align: center;
  text-transform: capitalize;
  color: #2e2f42;
}

.features-subtitle,
.team-name,
.portfolio-name {
  font-size: 20px;
  line-height: 1.2;
  font-weight: 500;
  letter-spacing: 0.02em;
  color: #2e2f42;
}

.features-text,
.team-position,
.portfolio-text,
.footer-text {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
}

.team {
  background-color: #f4f4fd;
}

.team-item {
  background-color: #ffffff;
}

.footer {
  background-color: #2e2f42;
}

.footer .logo {
  color: #f4f4fd;
}

.footer .logo .logo-accent {
  color: #4d5ae5;
}

.footer-text {
  color: #f4f4fd;
}
.container {
  width: 1158px;
  padding-left: 15px;
  padding-right: 15px;
  margin-left: auto;
  margin-right: auto;
}
.section {
  padding-top: 120px;
  padding-bottom: 120px;
}

